# AIArbitrage

./: Cargo.toml  README.md  SUMMARY.md
.github/workflows/: ci.yml
analytics/: Cargo.toml
analytics/src/: defi_metrics.rs  lib.rs  main.rs  monitor.rs  orderbook.rs  risk.rs
canonicalizer/: Cargo.toml
canonicalizer/src/: events.rs  http_client.rs  lib.rs  main.rs  onchain.rs
crypto-ingestor/: Cargo.toml
crypto-ingestor/src/: agent.rs  canonical.rs  clock.rs  config.rs  error.rs  http_client.rs  labels.rs  lib.rs  main.rs  metadata.rs  metrics.rs  parse.rs  sink.rs  token_state.rs
crypto-ingestor/src/agents/: mod.rs  onchain.rs
crypto-ingestor/src/agents/binance/: account.rs  funding_history.rs  metadata.rs  mod.rs  ohlcv.rs  open_interest_history.rs  options.rs
crypto-ingestor/src/agents/coinbase/: account.rs  metadata.rs  mod.rs  ohlcv.rs
crypto-ingestor/src/agents/deribit/: options.rs
crypto-ingestor/tests/: labels.rs  new_events.rs  ohlcv.rs  ws.rs
docs/: CRATE_MAP.md  KEEP_REMOVE.md  feature-flags.md
macro-data/: Cargo.toml
macro-data/src/: lib.rs  main.rs
on-chain/: Cargo.toml
on-chain/src/: lib.rs
onchain-ingestor/: Cargo.toml
onchain-ingestor/src/: main.rs  sink.rs
signals/: Cargo.toml
signals/src/: lib.rs
