[package]
name = "ingestor"
version = "0.1.1"
edition = "2021"
default-run = "ingestor"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "io-util", "process", "io-std"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
chrono = "0.4"
rust_decimal = "1"

[profile.release]
opt-level = 3
