[package]
name = "onchain"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
