[package]
name = "onchain-ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
ethers = { version = "2", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
rdkafka = { version = "0.36", features = ["tokio"] }
canonicalizer = { path = "../canonicalizer" }
anyhow = "1"
